--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
   "name": "perseus-configured",
   "version": "0.1.0",
-  "private": true,
+  "description": "perseus, with fewer global deps",
+  "main": "index.js",
+  "repository": "git@github.com:ariabuckles/perseus-configured.git",
+  "author": "Aria Buckles <aria@classjourney.org>",
+  "license": "MIT",
+  "scripts": {
+    "postinstall": "BABEL_ENV=production babel src --out-dir lib --copy-files"
+  },
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   },
@@ -13,6 +23,18 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "BABEL_ENV=production babel src --out-dir lib --copy-files"
+  },
+  "babel": {
+    "presets": [
+      [
+        "es2015",
+        {
+          "loose": true
+        }
+      ],
+      "react"
+    ]
   }
 }
