--- a/package.json
+++ b/package.json
@@ -10,11 +10,20 @@
     "postinstall": "BABEL_ENV=production babel src --out-dir lib --copy-files"
   },
   "dependencies": {
+    "aphrodite": "^1.1.0",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "jquery": "^1.9.0",
+    "classnames": "^2.2.5",
+    "react-addons-create-fragment": "^15.4.2",
+    "react-addons-css-transition-group": "^15.4.2",
+    "react-addons-pure-render-mixin": "^15.4.2",
+    "mathquill": "git+https://github.com/luxp/mathquill-webpack.git#45340938c068373acc5e7525952fd6d89b11ac78",
+    "katex": "^0.7.1",
+    "underscore": "^1.4.4"
   },
   "devDependencies": {
     "react-scripts": "1.0.13"
