--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
     "jquery": "^1.9.0",
     "classnames": "^2.2.5",
     "react-addons-create-fragment": "^15.4.2",
@@ -28,6 +26,10 @@
     "mathquill": "git+https://github.com/matchu/mathquill-webpack.git#ec117de79e26ebf7e4901d7ef54c3bbd1af076e6",
     "katex": "^0.7.1",
     "underscore": "^1.4.4"
+  },
+  "peerDependencies": {
+    "react": "17.x",
+    "react-dom": "17.x"
   },
   "devDependencies": {
     "react-scripts": "1.0.13"
