--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "jquery": "^1.9.0",
     "classnames": "^2.2.5",
+    "create-react-class": "^15.7.0",
+    "jquery": "^1.9.0",
+    "katex": "^0.7.1",
+    "mathquill": "git+https://github.com/matchu/mathquill-webpack.git#ec117de79e26ebf7e4901d7ef54c3bbd1af076e6",
+    "prop-types": "^15.7.2",
     "react-addons-create-fragment": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
     "react-addons-pure-render-mixin": "^15.4.2",
-    "mathquill": "git+https://github.com/matchu/mathquill-webpack.git#ec117de79e26ebf7e4901d7ef54c3bbd1af076e6",
-    "katex": "^0.7.1",
     "underscore": "^1.4.4"
   },
   "peerDependencies": {
@@ -32,7 +34,9 @@
     "react-dom": "17.x"
   },
   "devDependencies": {
-    "react-scripts": "1.0.13"
+    "react-scripts": "^4.0.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "babel": {
     "presets": [
@@ -43,6 +47,18 @@
         }
       ],
       "react"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
     ]
   }
 }
